grammar.js
    source_file: $ => seq(repeat($._use_or_import), repeat($._declaration)),

    // ---------------------------------------------------------------------
    // Lexical layer
    // ---------------------------------------------------------------------

    // The lexer classifies a name by its first letter, after an optional
    // leading `_`. A `$` prefix escapes a keyword and is dropped from the
    // token text by the reference lexer; here it stays part of the token.
    name_lower: _ => /(\$[a-zA-Z]|_?[a-z])[a-zA-Z0-9_!$]*/,
    name_upper: _ => /_?[A-Z][a-zA-Z0-9_!$]*/,
    // Mathematical operators block; used for names like `⊆`.
    _name: $ => choice($.name_lower, $.name_upper, $.name_math),
    wildcard: _ => '_',

    // A user-defined operator: two or more characters from the operator set, or
    // a single `_` followed by one or more of them (`_>==>`), which the lexer
    // folds into the operator token. No explicit precedence:
    // tree-sitter weighs explicit precedence before match length, so demoting
    // this would make `>>` lex as two `>` tokens. Length alone lets it beat the
    // single-character operators, and at equal length the reserved spellings
    // win because a string literal is more specific than a pattern.
    intrinsic: _ => /%%[A-Z0-9_]*%%/,

    // A literal opened and never closed. The reference's Lexer emits an error token for these and
    // Parser2 keeps the enclosing declaration, putting an ErrorTree where the expression should be
    // -- it does not throw the declaration away. Without a production for the unterminated form,
    // tree-sitter's own recovery collapses the whole declaration into an ERROR node and that
    // structure is lost, so the two disagree about far more than the error itself.
    //
    // Negative precedence, deliberately: a well-formed literal is both longer and higher
    // precedence, so it always wins where both could match. The apostrophe, `regex"` and `%%` have
    // no other use in the grammar, so nothing else can be captured by accident.
    hole_anonymous: _ => '???',
    integer: _ =>
      token(
        choice(
          /0x[0-9a-fA-F]+(_[0-9a-fA-F]+)*(i8|i16|i32|i64|ii)?/,
          /[0-9]+(_[0-9]+)*(i8|i16|i32|i64|ii)?/,
        ),
      ),
    _literal: $ =>
      choice(
        $.string,
        $.string_interpolation,
        $.char,
        $.regex,
        $.integer,
        $.float,
        $.boolean,
        $.null,
      ),
    null: _ => 'null',

    // ---------------------------------------------------------------------
    // Names
    // ---------------------------------------------------------------------

    // `nameAllowQualified` stops as soon as it consumes a token in its `tail`
    // set, which defaults to NameLowercase. So a qualified name is a run of
    // uppercase segments optionally ending in one lowercase segment:
    // `Foo.Bar.baz` is a single name, but `sb.append` is just `sb`, leaving
    // `.append` to the postfix rules that build a field access or a method
    // invocation.
    // `Foo.` closes a TrailingDot node in the reference (Parser2.nameAllowQualified) rather than
    // failing, so the dot belongs inside the qualified name here too.
    qualified_name: $ =>
      seq(
        repeat(seq($._qualified_segment, $._dot)),
        choice($._qualified_segment, $.name_lower),
        // Either dot: the scanner classifies `Foo.` at end of line as DOT_SPACED, because what
        // follows the dot is whitespace. The reference does not care -- nameAllowQualified closes a
        // TrailingDot for a dot with no name after it either way.
        optional(alias(choice($._dot, $._dot_spaced), $.trailing_dot)),
      ),
    _qualified_segment: $ => choice($.name_upper, $.name_math),

    // Java names are the exception: `nameAllowQualified` is called with an
    // empty tail set for them, so `java.util.Arrays` never stops early.
    java_qualified_name: $ =>
      seq($._java_segment, repeat(seq($._dot, $._java_segment))),
    _java_segment: $ => choice($.name_lower, $.name_upper),

    // ---------------------------------------------------------------------
    // Uses and imports — a strict prefix of the compilation unit
    // ---------------------------------------------------------------------

    _use_or_import: $ => seq(choice($.use_declaration, $.import_declaration), optional(';')),

    use_declaration: $ => seq('use', $.qualified_name, optional(seq($._dot, $.use_many))),
    _declaration: $ =>
      choice(
        $.module_declaration,
        $.function_declaration,
        $.enum_declaration,
        $.struct_declaration,
        $.trait_declaration,
        $.instance_declaration,
        $.effect_declaration,
        $.type_alias_declaration,
      ),

    function_declaration: $ =>
      seq(
        ...prologue($),
        choice('def', 'redef'),
        field('name', functionName($)),
        optional($.type_parameter_list),
        field('parameters', $.parameter_list),
        ':',
        $._type_and_effect,
        optional($.trait_constraints),
        optional($.equality_constraints),
        '=',
        field('body', $._statement),
      ),

    // A trait signature is a `def` whose body may be omitted.
    parameter_list: $ => seq('(', commaSep($.parameter), ')'),
    parameter: $ => seq(field('name', variableName($)), optional(seq(':', $._type))),

    _type_name: $ => choice($.name_upper, $.static_type),
    _type_and_effect: $ => prec.right(seq($._type, optional($.effect_annotation))),
    effect_annotation: $ => seq('\\', $._type),

    // A qualified name in type position is uppercase throughout; a bare
    // lowercase name there is a type variable, never a reference.
    type_reference: $ => seq($._type_name, repeat(seq($._dot, $._type_name))),

    _type: $ =>
      choice(
        $.type_reference,
        // A leaf, like the reference's Type.Variable, which holds the name as a token rather than
        // as a child node. Aliasing the three name rules here rather than wrapping them in a
        // `type_variable` rule is what keeps it a leaf: a wrapper would give the node one named
        // child where the reference has none, and every type variable would diverge on arity.
        alias(choice($.name_lower, $.name_math, $.wildcard), $.type_variable),
        $.type_constant,
        $.tuple_type,
        $.record_row_type,
        $.record_type,
        $.effect_set_type,
        $.schema_type,
        $.schema_row_type,
        $.extensible_type,
        $.case_set_type,
        $.type_application,
        $.unary_type,
        $.binary_type,
      ),

    _pattern: $ =>
      choice(
        $.variable_pattern,
        $.literal_pattern,
        $.tag_pattern,
        $.tuple_pattern,
        $.record_pattern,
        $.unary_pattern,
        $.cons_pattern,
      ),

    variable_pattern: $ => choice($.name_lower, $.name_math, $.wildcard),
    literal_pattern: $ => $._literal,
    tag_pattern: $ => seq($.qualified_name, optional($.tag_pattern_body)),
    tag_pattern_body: $ => seq('(', commaSep($._pattern), ')'),
    tuple_pattern: $ => seq('(', commaSep($._pattern), ')'),
    record_pattern: $ =>
      seq('{', commaSep($.record_pattern_field), optional(seq('|', $._pattern)), '}'),
    record_pattern_field: $ => seq(field('name', $.name_lower), optional(seq('=', $._pattern))),
    unary_pattern: $ => seq(alias('-', $.operator), $._literal),
    cons_pattern: $ => prec.right(seq($._pattern, '::', $._pattern)),

    // ---------------------------------------------------------------------
    // Expressions
    // ---------------------------------------------------------------------

    _statement: $ => choice($._expression, $.sequence_expression),
    sequence_expression: $ => prec.right(PREC.sequence, seq($._expression, ';', $._statement)),

    _expression: $ =>
      choice(
        $._literal,
        $.debug_interpolation,
        $.qualified_name,
        $.wildcard,
        $.intrinsic,
        $.hole_anonymous,
        $.hole_named,
        $.hole_variable,
        $.static_expression,
        $.unit_expression,
        $.paren_expression,
        $.tuple_expression,
        $.ascribe_expression,
        $.operator_lambda,
        $.lambda,
        $.block,
        $.record_expression,
        $.let_expression,
        $.local_def_expression,
        $.region_expression,
        $.if_expression,
        $.match_expression,
        $.match_lambda,
        $.ext_match_expression,
        $.ext_match_lambda,
        $.restrictable_choose,
        $.ext_tag_expression,
        $.open_variant_expression,
        $.foreach_expression,
        $.for_monadic_expression,
        $.for_applicative_expression,
        $.array_literal,
        $.vector_literal,
        $.list_literal,
        $.set_literal,
        $.map_literal,
        $.checked_cast,
        $.unchecked_cast,
        $.unsafe_expression,
        $.run_expression,
        $.handler_expression,
        $.try_expression,
        $.throw_expression,
        $.new_expression,
        $.invoke_constructor,
        $.super_expression,
        $.spawn_expression,
        $.par_yield_expression,
        $.select_expression,
        $.use_expression,
        $.fixpoint_constraint_set,
        $.fixpoint_solve,
        $.fixpoint_psolve,
        $.unterminated_literal,
        $.unterminated_string,
        $.fixpoint_inject,
        $.fixpoint_query,
        $.fixpoint_query_with_provenance,
        $.fixpoint_lambda,
        $.apply_expression,
        $.invoke_method,
        $.get_field,
        $.record_select,
        $.struct_get,
        $.struct_put,
        $.index_expression,
        $.index_assign_expression,
        $.unary_expression,
        $.binary_expression,
      ),

    static_expression: _ => 'Static',

    unit_expression: _ => seq('(', ')'),
    tuple_expression: $ => seq('(', commaSep1($.argument), ')'),
    ascribe_expression: $ => seq('(', $._expression, ':', $._type_and_effect, ')'),
    operator_lambda: $ => seq('(', choice(...OPERATOR_TOKENS, $.generic_operator), ')'),

    lambda: $ =>
      prec.right(
        seq(
          field('parameters', choice($.parameter_list, $.parameter)),
          $._arrow_spaced,
          field('body', $._expression),
        ),
      ),

    block: $ => seq('{', $._statement, '}'),

    record_expression: $ =>
      seq('{', commaSep($.record_operation), optional(seq('|', $._expression)), '}'),
    let_expression: $ =>
      prec.right(
        seq('let', $._pattern, optional(seq(':', $._type)), '=', field('body', $._statement)),
      ),

    local_def_expression: $ =>
      prec.right(
        seq(
          repeat($.annotation),
          'def',
          field('name', functionName($)),
          field('parameters', $.parameter_list),
          optional(seq(':', $._type_and_effect)),
          '=',
          field('body', $._statement),
        ),
      ),

    region_expression: $ => prec.right(seq('region', variableName($), optional($.block))),

    if_expression: $ =>
      prec.right(
        seq(
          'if',
          '(',
          field('condition', $._expression),
          ')',
          field('consequence', $._expression),
          optional(seq('else', field('alternative', $._expression))),
        ),
      ),

    match_expression: $ => seq('match', $._expression, $.match_body),
    match_body: $ => seq('{', repeat(seq($.match_rule, optional(','))), '}'),
    match_rule: $ => seq('case', $._pattern, optional(seq('if', $._expression)), '=>', $._statement),

    match_lambda: $ => prec.right(seq('match', $._pattern, $._arrow_spaced, $._expression)),

    ext_match_expression: $ => seq('ematch', $._expression, $.ext_match_body),
    ext_match_body: $ => seq('{', repeat(seq($.ext_match_rule, optional(','))), '}'),
    ext_match_rule: $ => seq('case', $._pattern, '=>', $._statement),
    ext_match_lambda: $ => prec.right(seq('ematch', $._pattern, $._arrow_spaced, $._expression)),

    restrictable_choose: $ => seq(choice('choose', 'choose*'), $._expression, $.match_body),

    ext_tag_expression: $ => prec.right(seq('xvar', $.name_upper, optional($.argument_list))),
    for_fragments: $ => seq('(', seq($._for_fragment, repeat(seq(';', $._for_fragment))), ')'),
    _for_fragment: $ => choice($.for_guard, $.for_generator, $.for_let),
    for_guard: $ => seq('if', $._expression),
    for_generator: $ => seq($._pattern, '<-', $._expression),
    for_let: $ => seq($._pattern, '=', $._expression),

    foreach_expression: $ => prec.right(seq('foreach', $.for_fragments, $._expression)),
    for_monadic_expression: $ => seq('forM', $.for_fragments, 'yield', $._expression),
    for_applicative_expression: $ => seq('forA', $.for_fragments, 'yield', $._expression),

    // `Array#{...}` and `spawn` both require an explicit region.
    array_literal: $ => seq('Array#', '{', commaSep($._expression), '}', $.region_name),
    vector_literal: $ => seq('Vector#', '{', commaSep($._expression), '}'),
    list_literal: $ => seq('List#', '{', commaSep($._expression), '}'),
    set_literal: $ => seq('Set#', '{', commaSep($._expression), '}'),
    map_literal: $ => seq('Map#', '{', commaSep($.map_entry), '}'),
    map_entry: $ => seq($._expression, '=>', $._expression),
    region_name: $ => seq('@', $._expression),

    unchecked_cast: $ =>
      seq('unchecked_cast', '(', $._expression, optional(seq('as', $._type_and_effect)), ')'),

    unsafe_expression: $ => seq('unsafe', $._type, optional(seq('as', $._type)), $.block),

    run_expression: $ => prec.right(seq('run', $._expression, repeat1(seq('with', $._expression)))),
    handler_expression: $ => seq('handler', $.qualified_name, $.handler_body),
    handler_body: $ => seq('{', repeat(seq($.handler_rule, optional(','))), '}'),
    handler_rule: $ => seq('def', field('name', $.name_lower), $.parameter_list, '=', $._expression),

    try_expression: $ => prec.right(seq('try', $._expression, repeat($.catch_body))),
    catch_body: $ => seq('catch', '{', repeat(seq($.catch_rule, optional(','))), '}'),
    catch_rule: $ =>
      seq('case', variableName($), ':', $.java_qualified_name, '=>', $._statement),
    throw_expression: $ => prec.right(seq('throw', $._expression)),

    new_expression: $ =>
      choice(
        seq('new', $._type, $.region_name, '{', commaSep($.struct_field_init), '}'),
        seq('new', $._type, '{', repeat(choice($.jvm_method, $.jvm_constructor)), '}'),
      ),
    struct_field_init: $ => seq(field('name', $.name_lower), '=', $._expression),
    jvm_method: $ =>
      seq(
        repeat($.annotation),
        'def',
        field('name', $._name),
        $.parameter_list,
        ':',
        $._type_and_effect,
        '=',
        $._statement,
      ),
    jvm_constructor: $ => seq('def', 'new', '(', ')', ':', $._type_and_effect, '=', $._statement),
    invoke_constructor: $ => seq('new', $._type, $.argument_list),

    spawn_expression: $ => prec.right(seq('spawn', $._expression, $.region_name)),
    par_yield_expression: $ => seq('par', optional($.par_fragments), 'yield', $._expression),
    par_fragments: $ => seq('(', seq($.par_fragment, repeat(seq(';', $.par_fragment))), ')'),
    par_fragment: $ => seq($._pattern, '<-', $._expression),

    select_expression: $ => seq('select', '{', repeat($.select_rule), '}'),
    select_rule: $ =>
      choice(
        seq('case', variableName($), '<-', $.qualified_name, '(', $._expression, ')', '=>', $._statement),
        seq('case', $.wildcard, '=>', $._statement),
      ),

    use_expression: $ =>
      prec.right(seq(choice($.use_declaration, $.import_declaration), ';', $._statement)),


    argument_list: $ => seq('(', commaSep($.argument), ')'),
    argument: $ => seq($._expression, optional(seq('=', $._expression))),

    invoke_method: $ =>
      prec.left(PREC.postfix + 1, seq($._expression, $._dot, $.name_lower, $.argument_list)),
